Revert "fix Scrollbars dropdownLayout (#2952)"
This reverts commit 18ea56f64a7ed959ef5104f186f922358d04dfa3.

--- a/src/DropdownLayout/DropdownLayout.scss
+++ b/src/DropdownLayout/DropdownLayout.scss
@@ -34,8 +34,7 @@ $arrowDownShadow: -3px -3px 8px rgba(0, 0, 0, .1);
   height: 0;
   padding: 0;
   transition: opacity 0.2s ease;
-  display: flex;
-  flex-direction: column;
+  display: none;
   width: 100%;
   z-index: 6;
   left: 0;
